force-app/main/default/objects/Lead/fields/Biz_Dev__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev__c</fullName>
    <label>Biz Dev Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>