force-app/main/default/objects/Lead/fields/Biz_Dev_Owner__c.field-meta.xml
<CustomField>
    <fullName>Biz_Dev_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Biz Dev Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>