force-app/main/default/objects/Lead/fields/bizdev__c.field-meta.xml
<CustomField>
    <fullName>bizdev__c</fullName>
    <formula>IF( CreatedBy.Profile.Name = &quot;Biz Dev&quot; , CreatedBy.FirstName+&apos; &apos; +CreatedBy.LastName , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biz Dev</label>
    <type>Text</type>
</CustomField>