force-app/main/default/objects/Lead/fields/Canopy_Size_Zapier__c.field-meta.xml
<CustomField>
    <fullName>Canopy_Size_Zapier__c</fullName>
    <label>Canopy Size – Zapier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 2,500 sq. ft.</fullName>
            </value>
            <value>
                <fullName>Over 2,500 sq. ft.</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>