force-app/main/default/objects/Lead/fields/ConvertedLeadCheck__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLeadCheck__c</fullName>
    <defaultValue>&apos;Converted Lead&apos;</defaultValue>
    <description>To map with accounts and make sure that the converted leads will not be blocked by the &quot;block account creation&quot; validation rule</description>
    <label>ConvertedLeadCheck</label>
    <length>40</length>
    <type>Text</type>
</CustomField>