force-app/main/default/objects/Lead/fields/Country_zapier__c.field-meta.xml
<CustomField>
    <fullName>Country_zapier__c</fullName>
    <label>Country - Zapier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>