force-app/main/default/objects/Lead/fields/Emerging_Market_State_County__c.field-meta.xml
<CustomField>
    <fullName>Emerging_Market_State_County__c</fullName>
    <label>Emerging Market State/County</label>
    <length>100</length>
    <type>Text</type>
</CustomField>