force-app/main/default/objects/Lead/fields/Estimated_Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Account_Value__c</fullName>
    <label>Estimated Account Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>