force-app/main/default/objects/Lead/fields/Lead_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Status_Reason__c</fullName>
    <label>Lead Status Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inactive – No Response</fullName>
            </value>
            <value>
                <fullName>Inactive – No Sales Opportunity</fullName>
            </value>
            <value>
                <fullName>Inactive – Passed to Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>