force-app/main/default/objects/Lead/fields/LeadSourceDetail__c.field-meta.xml
<CustomField>
    <fullName>LeadSourceDetail__c</fullName>
    <label>Lead Source Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>LeadSource</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Damian Solomon</fullName>
            </value>
            <value>
                <fullName>PIPP Horticulture</fullName>
            </value>
            <value>
                <fullName>Bickel Co</fullName>
            </value>
            <value>
                <fullName>Kulture</fullName>
            </value>
            <value>
                <fullName>Michael Sagan</fullName>
            </value>
            <value>
                <fullName>Zartarian Engineering</fullName>
            </value>
            <value>
                <fullName>Athena</fullName>
            </value>
            <value>
                <fullName>Grow Glide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>