force-app/main/default/objects/Lead/fields/Market_Details__c.field-meta.xml
<CustomField>
    <fullName>Market_Details__c</fullName>
    <label>Market Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Market_Details</valueSetName>
    </valueSet>
</CustomField>