force-app/main/default/objects/Lead/fields/Other_Detail__c.field-meta.xml
<CustomField>
    <fullName>Other_Detail__c</fullName>
    <label>Other Detail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>