force-app/main/default/objects/Lead/fields/Registering_Deal_on_Behalf_Of__c.field-meta.xml
<CustomField>
    <fullName>Registering_Deal_on_Behalf_Of__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Registering Deal on Behalf Of related to Magentrix lead process.</description>
    <label>Registering Deal on Behalf Of</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>