force-app/main/default/objects/Lead/fields/Size_of_Grow__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Grow__c</fullName>
    <description>This is the approximate size of the grow in either square feet or square meters</description>
    <inlineHelpText>This is the approximate size of the grow in either square feet or square meters</inlineHelpText>
    <label>Size of Grow</label>
    <precision>11</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>