force-app/main/default/objects/Lead/fields/State_Zapier__c.field-meta.xml
<CustomField>
    <fullName>State_Zapier__c</fullName>
    <label>State - Zapier</label>
    <length>40</length>
    <type>Text</type>
</CustomField>