force-app/main/default/objects/Lead/fields/SUG_LEADID__c.field-meta.xml
<CustomField>
    <fullName>SUG_LEADID__c</fullName>
    <label>SUG LEADID</label>
    <type>TextArea</type>
</CustomField>