force-app/main/default/objects/Lead/validationRules/Billing_State_and_Country_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_State_and_Country_Required</fullName>
    <active>true</active>
    <description>Billing_State_and_Country_Required</description>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.Lead_Validation_Rule__c	= FALSE,
OR(ISBLANK( Country ) , ISBLANK( FirstName )  )
)</errorConditionFormula>
    <errorMessage>First Name, Billing State and Billing Country are Required.</errorMessage>
</ValidationRule>