force-app/main/default/objects/Lead/validationRules/Missing_Contact_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Missing_Contact_Validation</fullName>
    <active>true</active>
    <description>Every Lead must have either an email, a phone or a mobile phone.</description>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.Lead_Validation_Rule__c	= FALSE,
ISBLANK(Email),
ISBLANK(Phone),
ISBLANK(MobilePhone)
)</errorConditionFormula>
    <errorDisplayField>Email</errorDisplayField>
    <errorMessage>Every Lead must have an email address</errorMessage>
</ValidationRule>