force-app/main/default/objects/Lead/validationRules/Partner_Status_Not_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Status_Not_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$Setup.Bypass_Configuration__c.Lead_Validation_Rule__c = FALSE,
NOT( ISBLANK( TEXT(Partner_Status__c ) ) ),
NOT( ISNULL( TEXT(Partner_Status__c )) ),
NOT(
OR(
ISPICKVAL( Channel__c , &apos;AR&apos;),
ISPICKVAL( Channel__c , &apos;PAR&apos;),
ISPICKVAL( Channel__c , &apos;Wholesaler/Distributor&apos;),
ISPICKVAL( Channel__c , &apos;System Integrator&apos;)
)
)
)</errorConditionFormula>
    <errorDisplayField>Partner_Status__c</errorDisplayField>
    <errorMessage>Partner Status is not required for this value of Channel.</errorMessage>
</ValidationRule>