force-app/main/default/objects/Lead/listViews/APAC_Strategic_Accounts_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>APAC_Strategic_Accounts_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>APAC - Strategic Accounts Queue</label>
    <queue>APAC_Strategic_Accounts_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>