force-app/main/default/objects/Lead/listViews/Authorized_Reseller_Queue_Is_this_regi_Lead.listView-meta.xml
<ListView>
    <fullName>Authorized_Reseller_Queue_Is_this_regi_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Authorized Reseller Queue - Is this regi</label>
    <queue>Authorized_Reseller_Queue_Is_this_regi</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>