force-app/main/default/objects/Lead/listViews/Distributor_Reseller_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Distributor_Reseller_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Distributor/Reseller Queue</label>
    <queue>Distributor_Reseller_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>