force-app/main/default/objects/Lead/listViews/EMEA_Authorized_Reseller_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Authorized_Reseller_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA – Authorized Reseller</label>
    <queue>EMEA_Authorized_Reseller</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>