force-app/main/default/objects/Lead/listViews/EMEA_Cannabis_Direct_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Cannabis_Direct_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA - Cannabis – Direct Queue</label>
    <queue>EMEA_Cannabis_Direct_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>