force-app/main/default/objects/Lead/listViews/EMEA_Commercial_Agriculture_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Commercial_Agriculture_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA – Commercial Agriculture Queue</label>
    <queue>EMEA_Commercial_Agriculture_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>