force-app/main/default/objects/Lead/listViews/EMEA_Default_Lead_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Default_Lead_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA Default Lead Queue</label>
    <queue>EMEA_Default_Lead_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>