force-app/main/default/objects/Lead/listViews/EMEA_Nordics_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>EMEA_Nordics_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>EMEA Nordics Queue</label>
    <queue>EMEA_Nordics_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>