force-app/main/default/objects/Lead/listViews/LATAM_Strategic_Account_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>LATAM_Strategic_Account_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>LATAM – Strategic Account Queue</label>
    <queue>LATAM_Strategic_Account_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>