force-app/main/default/objects/Lead/listViews/Network_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>Network_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>Network Queue</label>
    <queue>Network_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>