force-app/main/default/objects/Lead/listViews/North_America_Authorized_Reseller_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>North_America_Authorized_Reseller_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>North America– Authorized Reseller Queue</label>
    <queue>North_America_Authorized_Reseller_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>