force-app/main/default/objects/Lead/listViews/North_America_Cannabis_Direct_Queue_Lead.listView-meta.xml
<ListView>
    <fullName>North_America_Cannabis_Direct_Queue_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>North America - Cannabis – Direct Queue</label>
    <queue>North_America_Cannabis_Direct_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>