force-app/main/default/objects/Lead/listViews/North_America_Commercial_Agriculture_Q_Lead.listView-meta.xml
<ListView>
    <fullName>North_America_Commercial_Agriculture_Q_Lead</fullName>
    <filterScope>Queue</filterScope>
    <label>North America – Commercial Agriculture Q</label>
    <queue>North_America_Commercial_Agriculture_Q</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>